--- a/programs/locked-voter/Cargo.toml
+++ b/programs/locked-voter/Cargo.toml
@@ -24,7 +24,7 @@ anchor-lang = ">=0.22"
 anchor-spl = ">=0.22"
 govern = { path = "../govern", features = ["cpi"], version = "^0.5" }
 num-traits = "0.2"
-vipers = "^2.0"
+vipers = { git = "https://github.com/marinade-finance/vipers.git", branch = "anchor_26" }
 
 [dev-dependencies]
 proptest = { version = "1.0" }
