--- a/programs/simple-voter/Cargo.toml
+++ b/programs/simple-voter/Cargo.toml
@@ -23,5 +23,5 @@ default = []
 anchor-lang = ">=0.22"
 anchor-spl = ">=0.22"
 govern = { path = "../govern", features = ["cpi"], version = "^0.5" }
-smart-wallet = { version = "^0.11.0", features = ["cpi"] }
-vipers = "^2.0"
+smart-wallet = { git = "https://github.com/marinade-finance/goki", branch = "anchor_26", features = ["cpi"] }
+vipers = { git = "https://github.com/marinade-finance/vipers.git", branch = "anchor_26" }
